Fix spacing in mobile

--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -103,7 +103,7 @@
   .Intro {
     flex-direction: column;
     gap: 0rem;
-    height: 130vh;
+    height: 150vh;
     margin-top: 6rem;
   }
 
